k8s/ingress-service.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-service
  annotations:
    kubernetes.io/ingress.class: 'nginx'
    # good docs on rewrite https://github.com/kubernetes/ingress-nginx/blob/main/docs/examples/rewrite/README.md
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
    - http:
        paths:
          - path: /jake
            pathType: Prefix
            backend:
              service:
                name: django-app-cluster-ip
                port:
                  number: 8000
